# rust-json-server

./: Cargo.toml  Dockerfile  README.md  Rocket.toml
helm/templates/: rust-http-deployment.yaml  rust-http-service.yaml  rust-httpd-configmap.yaml
src/: main.rs
