[package]
name = "rocket-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
rocket_okapi = { version = "0.8.0", features = ["swagger", "rapidoc"] }
sea-orm = { version = "0.12", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
] }
serde = "1.0"
